// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardList renders with compact 1`] = `
<ul
  className="ax-card-list ax-card-list--medium ax-card-list--compact"
>
  <li
    className="ax-card"
    onClick={undefined}
  >
    Lorem Ipsum
  </li>
</ul>
`;

exports[`CardList renders with defaultProps 1`] = `
<ul
  className="ax-card-list ax-card-list--medium"
>
  <li
    className="ax-card"
    onClick={undefined}
  >
    Lorem Ipsum
  </li>
</ul>
`;

exports[`CardList renders with separators 1`] = `
<ul
  className="ax-card-list ax-card-list--medium ax-card-list--separators"
>
  <li
    className="ax-card"
    onClick={undefined}
  >
    Lorem Ipsum
  </li>
</ul>
`;

exports[`CardList renders with size large 1`] = `
<ul
  className="ax-card-list ax-card-list--large"
>
  <li
    className="ax-card"
    onClick={undefined}
  >
    Lorem Ipsum
  </li>
</ul>
`;

exports[`CardList renders with size medium 1`] = `
<ul
  className="ax-card-list ax-card-list--medium"
>
  <li
    className="ax-card"
    onClick={undefined}
  >
    Lorem Ipsum
  </li>
</ul>
`;
